--- a/src/main/resources/static/css/basic.css
+++ b/src/main/resources/static/css/basic.css
@@ -55,6 +55,9 @@ border: solid #ddeecc 3px; border-radius: 5px;}
 .data-tbl-body > tr{width: 100%; height: 40px;}
 
 .data-btn-area{float: left; width: 100%;}
+
+.pointer{cursor:pointer;}
+
 .btn-list{float: right; width: 4%; height: 40px; font-size: 11pt; background-color: #ffffff; border: solid #ccddbb 1px; color: #ccddbb;}
 .btn-write{float: right; width: 4%; height: 40px; font-size: 11pt; background-color: #99aa88; border: solid #ccddbb 1px; color: #ccddbb;}
 
