--- a/src/main/resources/static/css/admin.css
+++ b/src/main/resources/static/css/admin.css
@@ -2,6 +2,10 @@
 
 #wrap {float: left; display: block; width: 100%; height: 900px;}
 
+/* common */
+
+.dn{display:none;}
+
 /* header */
 .admin-header{float: left; width: 100%; height: 20%;}
 
@@ -12,7 +16,7 @@
 .prof-logut{float: left; width: 100%; height: 100%;}
 .prof-img{float: left;}
 .prof-link{
-    float: left; width: 70%; margin-top: 5%; margin-left: 10%; 
+    float: left; width: 70%; margin-top: 5%; margin-left: 2%; 
     text-decoration: none; text-align: center; color: black;}
 .prof-login{float: left; width: 100%; height: 100%; display: none;}
 
@@ -35,7 +39,14 @@
     padding: 5px;
 }
 
+.sub-menu-lst{
+	font-size: 12pt;
+	background-color: #dddddddd;
+}
+
+
 .cont-body{
     float: left; width: 90%; height: 100%;
 }
+
 
