관리자단 자유게시판 목록 뷰 추가

--- a/src/main/resources/templates/admin/freedom/list.html
+++ b/src/main/resources/templates/admin/freedom/list.html
@@ -8,6 +8,8 @@
 
 </head>
 <th:block layout:fragment="content">
-	<div class="cont-body"></div>
+	<div class="cont-body">
+		목록
+	</div>
 </th:block>
 </html>
