--- a/src/main/resources/templates/layout/admin_basic_layout.html
+++ b/src/main/resources/templates/layout/admin_basic_layout.html
@@ -6,11 +6,11 @@
 	<meta charset="UTF-8">
 	
 	<!-- css -->
-	<link href="../css/admin.css" rel="stylesheet">
+	<link href="/css/admin.css" rel="stylesheet">
 	
 	<!-- script -->
-	<script type="text/javascript" src="../js/jquery.js"></script>
-	<script type="text/javascript" src="../js/admin-menu-control.js"></script>
+	<script type="text/javascript" src="/js/jquery.js"></script>
+	<script type="text/javascript" src="/js/admin-menu-control.js"></script>
 	
 	<title>게시판 [관리자]</title>
 </head>
