--- a/src/main/resources/templates/admin/fragment/admin_menu.html
+++ b/src/main/resources/templates/admin/fragment/admin_menu.html
@@ -2,7 +2,7 @@
     <ul class="menu-list">
         <li class="menu-elemt">메뉴1
         	<ul class="sub-menu-lst dn">
-        		<li>서브메뉴1</li>
+        		<li><a href="/admin/freedom/list">자유게시판</a></li>
         		<li>서브메뉴2</li>
         		<li>서브메뉴3</li>
         		<li>서브메뉴4</li>
