--- a/src/main/resources/templates/user/freedom/view.html
+++ b/src/main/resources/templates/user/freedom/view.html
@@ -74,9 +74,14 @@ const registEvent = function() {
 	                        	<th colspan="1" class="bgcolor-ccddbb">첨부파일</th>
 	                        	<td colspan="3">
 	                        		<div class="file-group">
-	                        			<span class="attached-file"><a href="#">파일1</a><button type="button">삭제</button></span>
-	                        			<span class="attached-file"><a href="#">파일2</a><button type="button">삭제</button></span>
-	                        			<span class="attached-file"><a href="#">파일3</a><button type="button">삭제</button></span>
+	                        			<span th:unless="${freedom.board.fileName1 eq null}" class="attached-file">
+	                        				<a href="#" th:text="${freedom.board.fileName1}"></a><button type="button">삭제</button>
+	                        			</span>
+	                        			<span th:unless="${freedom.board.fileName2 eq null}" class="attached-file">
+	                        				<a href="#" th:text="${freedom.board.fileName2}">파일2</a><button type="button">삭제</button>
+	                        			</span>
+	                        			<span th:unless="${freedom.board.fileName3 eq null}" class="attached-file">
+	                        				<a href="#" th:text="${freedom.board.fileName3}">파일3</a><button type="button">삭제</button></span>
 	                        			<button type="button" class="btn-addfile">추가</button>
 	                        		</div>
 	                        	<td>
