파일다운로드js 추가

--- a/src/main/resources/templates/layout/basic_layout.html
+++ b/src/main/resources/templates/layout/basic_layout.html
@@ -34,4 +34,5 @@ var header = $("meta[name='_csrf_header']").attr("content");
 	</div>
 </body>
 <script type="text/javascript" th:src="@{/js/site-fileUpload.js}"></script>
+<script type="text/javascript" th:src="@{/js/site-fileDownload.js}"></script>
 </html>
