--- a/src/main/resources/templates/user/freedom/list.html
+++ b/src/main/resources/templates/user/freedom/list.html
@@ -144,7 +144,7 @@ const viewFunc = function() {
                 	<button type="button" class="btn-down">Excel</button>
                 </div>
             </div>
-            <div class="data-area">
+            <div class="data-area txt-center">
                 <table class="data-tbl mg-top2">
                     <colgroup>
                         <col style="width: 5%;">
